--- a/css/header.css
+++ b/css/header.css
@@ -41,16 +41,70 @@ body {
         display: none;
     }
   }
+ header .navbar {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    background: solid;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: Roboto, sans-serif;
+}
+.navbar a {
+  float: left;
+  color: yellow;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
+.dropdown {
+  color: yellow;
+  float: left;
+  overflow: hidden;
+}
 
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: yellow;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  border-radius: 2px;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  font-weight: 400;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 h1 {
     color: yellow;
     font-size: 160px;
     font-family:Dancing Script ;
     text-align: center;
-    position: relative;
-    top: 130px;
 }
 @media (max-width: 620px) {
     h1 {
@@ -60,11 +114,10 @@ h1 {
 
 .text-header {
     color: yellow;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
     position: relative;
-    top: 110px;
-
+    bottom: 120px;
 }
 
 header {
@@ -72,7 +125,7 @@ header {
     background-position: center;
     background-size: cover;
     min-width: 400px;
-    min-height: 850px;
+    min-height: 750px;
 }
 
 .banner {
