--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,8 @@
 /* Tanya Tkach block start */
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+
 :root {
     /*contacts and footter colors*/
     --hcolor:#F1C324;
@@ -22,6 +24,14 @@ body {
     align-items: center;
     padding: 10px;
 }
+header {
+    background-image:url(../img/chernivtsi.jpg);
+    background-position: center;
+    background-size: cover;
+    min-width: 400px;
+    min-height: 750px;
+}
+
 .logo-container img {
     width: 100px;
     height: 100px;
@@ -176,103 +186,27 @@ button:focus {
     opacity: 1;
   }
 }
+/* Modal window */
 
 @media (max-width: 700px) {
     .logo-header {
         display: none;
     }
-    .dropdown .dropbtn {
-        display: none;
-    }
-    .navbar a {
+    .nav-item a {
         display: none; 
     }
   }
- header .navbar {
-    display: flex;
-    justify-content: center;
-    flex: 1;
-    background: solid;
-    font-size: 16px;
-    font-weight: 700;
-    font-family: Roboto, sans-serif;
-}
-.navbar a {
-  float: left;
-  color: yellow;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
 
-.dropdown {
-  color: yellow;
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: yellow;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  border-radius: 2px;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  font-weight: 400;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 h1 {
     color: yellow;
-    font-size: 160px;
-    font-family:Dancing Script ;
+    font-size: 130px;
+    font-family: Leckerli One;
     text-align: center;
 }
 @media (max-width: 620px) {
     h1 {
-      font-size: 130px;  
+      font-size: 110px;  
     }
-}
-
-.text-header {
-    color: yellow;
-    font-size: 25px;
-    text-align: center;
-    position: relative;
-    bottom: 120px;
-}
-
-header {
-    background-image:url(../img/chernivtsi.jpg);
-    background-position: center;
-    background-size: cover;
-    min-width: 400px;
-    min-height: 750px;
 }
 
 .banner {
@@ -280,7 +214,14 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-top: 100px;
 }
+.text-header {
+    color: yellow;
+    font-size: 25px;
+    
+}
+
 .white-color {
     background-color: white;
   
@@ -290,9 +231,17 @@ header {
     grid-template-columns:1fr 1fr;
 }
 
+.point {
+    list-style-type: square;
+    font-weight: 500;
+    color: lightskyblue;
+    font-size: 40px;
+    text-align: center;
+}
+
 @media (max-width: 620px) {
     .about {
-      grid-template-columns:1fr;  
+     grid-template-columns:1fr;  
     }
 }
 .logo-main {
@@ -306,6 +255,7 @@ header {
    width: 100%;
    height: 100%;
 }
+
 .white-color p {
     font-size: 18px;
     padding: 20px;
